Add additional styles

--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,6 +1,6 @@
 // =============================== Footer ===========================
 .footer {
-  background-image: url(../../images/bcg-footer.jpg);
+  background-image: url("../../images/bcg-footer.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -19,7 +19,7 @@
     position: absolute;
     top: -81px;
     left: 43%;
-    background-image: url(../../images/bcg-footer.png);
+    background-image: url("../../images/bcg-footer.png");
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
