--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,7 +1,7 @@
 // ================================ HEADER ========================
 
 .header-wrap {
-  background-image: url(../../images/bcg-header.jpg);
+  background-image: url("../../images/bcg-header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
