--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -1,6 +1,6 @@
 // ============================= MAIN ========================
 .site-main {
-  background-image: url(/images/bcg-main.png);
+  background-image: url("../../images/bcg-main.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
