--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,10 +1,11 @@
 // ================================ HEADER ========================
 
 .header-wrap {
-  background-image: url("../../images/bcg-header-desktop.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-image: url("../../images/bcg-header.jpg");
+  // background-image: url("../../images/bcg-header.jpg");
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // background-position: center;
 }
 
 .header__inner {
