Add additional styles to the bcg img in the header

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -2,10 +2,9 @@
 
 .header-wrap {
   background-image: url("../../images/bcg-header.jpg");
-  // background-image: url("../../images/bcg-header.jpg");
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .header__inner {
