Add chenged sectionbig style

--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -173,7 +173,7 @@
   }
 
   &__textbox {
-    width: 410px;
+    max-width: 410px;
     height: 56px;
     position: absolute;
     background-color: #ffffff;
